log
Tue, Apr 15, 2025 12:29:34 PM: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:4:0:
hashmap.c: In function 'createMap':
hashmap.c:56:15: error: unused variable 'map' [-Werror=unused-variable]
     HashMap * map = (HashMap *)malloc(sizeof(HashMap));
               ^~~
cc1.exe: all warnings being treated as errors
eeef3b7
